Utilizando Grunt com cssmin, uglify e watch

--- a/vitrine/index.html
+++ b/vitrine/index.html
@@ -2,13 +2,13 @@
 <html lang="pt_BR">
 <head>
 	<meta charset="utf-8">
-	<title>Grunt</title>
-	<link rel="stylesheet" href="src/css/normaset.css">
-	<link rel="stylesheet" href="src/css/main.css">
+	<title>Curso Node</title>
+	<link rel="stylesheet" href="public/css/all.min.css">
 	<script src="src/js/jquery.js"></script>
-	<script src="src/js/main.js"></script>
+	<script src="http://localhost:35729/livereload.js"></script>
 </head>
 <body>
+<h1>Grunt</h1>
 	
 </body>
 </html>
